# Vk_tutoriel

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  shader.vert  test.cpp
cppVulkanAPI/: CMakeLists.txt
cppVulkanAPI/include/: cppVulkanAPI.hpp
cppVulkanAPI/src/: buffer.cpp  buffer.hpp  command_buffer.cpp  command_buffer.hpp  command_pool.cpp  command_pool.hpp  debug.cpp  debug.hpp  defines.hpp  device.cpp  device.hpp  device_memory.cpp  device_memory.hpp  frame_buffer.cpp  frame_buffer.hpp  graphic_pipeline.cpp  graphic_pipeline.hpp  image.cpp  image.hpp  image_view.cpp  image_view.hpp  instance.cpp  instance.hpp  physical_device.cpp  physical_device.hpp  queue.cpp  queue.hpp  shader_module.cpp  shader_module.hpp  swapchain.cpp  swapchain.hpp  sync_object.cpp  sync_object.hpp  window.cpp  window.hpp  window_manager.cpp  window_manager.hpp
cppVulkanAPI/src/core/: buffer.hpp  debug.cpp  debug.hpp  window.cpp  window.hpp  window_manager.cpp  window_manager.hpp
cppVulkanAPI/src/core/image/: image.hpp  image_view.hpp  sampler.hpp
cppVulkanAPI/src/core/pipeline/: descriptor_layout.hpp  descriptor_pool.hpp  descriptor_set.cpp  descriptor_set.hpp  graphic_pipeline.cpp  graphic_pipeline.hpp  shader_module.hpp
cppVulkanAPI/src/framework/: command.cpp  command.hpp  descriptor.cpp  descriptor.hpp  device.cpp  device.hpp  pipeline.cpp  pipeline.hpp  render_api.cpp  render_api.hpp  swapchain.cpp
cppVulkanAPI/src/framework/memory/: buffer.cpp  buffer.hpp  image.cpp  image.hpp  staging_buffer.cpp  staging_buffer.hpp  texture.cpp  texture.hpp
cppVulkanAPI/src/framework/object/: mesh.cpp  mesh.hpp
cppVulkanAPI/src/framework/window/: window.cpp
cppVulkanAPI/src/image/: image.cpp  image.hpp  image_view.cpp  image_view.hpp  sampler.cpp  sampler.hpp
cppVulkanAPI/src/pipeline/: descriptor_layout.cpp  descriptor_layout.hpp  descriptor_pool.cpp  descriptor_pool.hpp  descriptor_set.cpp  descriptor_set.hpp  graphic_pipeline.cpp  graphic_pipeline.hpp  pipeline_layout.cpp  pipeline_layout.hpp  render_pass.cpp  render_pass.hpp  shader_module.cpp  shader_module.hpp
include/: application.hpp  camera.hpp  image_loader.hpp  logger.hpp  model_loading.hpp  obj_loader.hpp  object.hpp  utils.hpp  vertex.hpp  vertices.hpp
include/app/: application.hpp  buffer.hpp  camera.hpp  descriptors.hpp  device.hpp  frame_info.hpp  game_object.hpp  keyboard_movement_controller.hpp  model.hpp  pipeline.hpp  render_system.hpp  renderer.hpp  swap_chain.hpp  window.hpp
include/app/systems/: point_light_system.hpp
include/ft_glm/: ft_glm.hpp  matrix.hpp  matrix_utils.hpp  utils.hpp  vector.hpp
playground/: CMakeLists.txt
playground/shaders/: compile.sh  simple_shader.frag  simple_shader.vert
playground/src/: application.cpp  application.hpp  game_object.cpp  game_object.hpp  logger.cpp  logger.hpp  main.cpp  render_api.cpp  render_api.hpp  vertex.hpp
playground/textures/: texture.ppm  unicorn.ppm
shader/: compile.sh
shaders/: compile.sh  point_light.frag  point_light.vert  shader.frag  shader.vert  simple_shader.frag  simple_shader.vert
src/: logger.cpp  main.cpp  utils.cpp
src/app/: application.cpp  buffer.cpp  camera.cpp  descriptors.cpp  device.cpp  game_object.cpp  keyboard_movement_controller.cpp  model.cpp  pipeline.cpp  render_system.cpp  renderer.cpp  swap_chain.cpp  window.cpp
src/app/systems/: point_light_system.cpp  simple_render_system.cpp
src/application/: buffer.cpp  clean_up.cpp  command.cpp  debug.cpp  depth.cpp  descriptor.cpp  draw.cpp  frame_buffer.cpp  graphics_pipeline.cpp  image.cpp  image_view.cpp  index.cpp  instance.cpp  key_callback.cpp  logical_device.cpp  main_loop.cpp  model_loading.cpp  mouse_callback.cpp  physical_device.cpp  render_pass.cpp  swap_chain.cpp  sync_objects.cpp  texture.cpp  time.cpp  uniform_buffer.cpp  vertex_buffer.cpp  window.cpp
tests/: ft_glm_test.hpp  main_test.cpp
